--- a/src/pages/subsession/[id].astro
+++ b/src/pages/subsession/[id].astro
@@ -1,4 +1,19 @@
 ---
+import {
+  db,
+  eq,
+  asc,
+  Car,
+  CarClass,
+  PastSeason,
+  Season,
+  Standing,
+  Subsession,
+  SubsessionPracticeResults,
+  SubsessionQualifyingResults,
+  SubsessionRaceResults,
+  User,
+} from "astro:db";
 import { connectToDatabase } from "$lib/mongodb";
 import DefaultLayout from "$lib/layouts/default.astro";
 import Header from "$lib/components/subsession/header.astro";
@@ -7,22 +22,55 @@ import LicenseInfo from "$lib/components/subsession/licenseInfo.astro";
 import RaceSummary from "$lib/components/subsession/raceSummary.astro";
 import RelevantIds from "$lib/components/subsession/relevantIds.astro";
 import SessionResultsTables from "$lib/components/session-results/tables.astro";
-import type { Subsession } from "$lib/types";
+import type { Subsession as SubsessionType } from "$lib/types";
 export async function getStaticPaths() {
-  const dbConnection = await connectToDatabase();
-  const db = dbConnection.db;
-  const collection = db.collection("subsessions");
-  const subsessionIds: Array<number> = await collection.distinct("_id", {});
-  return subsessionIds.map((id) => ({ params: { id } }));
+  const subsessions = await db
+    .selectDistinct({ subsession_id: Subsession.subsession_id })
+    .from(Subsession);
+  return subsessions.map(({ subsession_id: id }) => ({ params: { id } }));
 }
 const { id } = Astro.params;
-const dbConnection = await connectToDatabase();
-const db = dbConnection.db;
-const collection = db.collection<Subsession>("subsessions");
-const subsession: Subsession = await collection.findOne({ _id: Number(id) });
+const [subsession] = await db
+  .select()
+  .from(Subsession)
+  .where(eq(Subsession.subsession_id, Number(id)));
+const practiceResults = await db
+  .select()
+  .from(SubsessionPracticeResults)
+  .where(eq(SubsessionPracticeResults.subsession_id, Number(id)))
+  .orderBy(asc(SubsessionPracticeResults.finish_position));
+const qualifyingResults = await db
+  .select()
+  .from(SubsessionQualifyingResults)
+  .where(eq(SubsessionQualifyingResults.subsession_id, Number(id)))
+  .orderBy(asc(SubsessionQualifyingResults.finish_position));
+const raceResults = await db
+  .select()
+  .from(SubsessionRaceResults)
+  .where(eq(SubsessionRaceResults.subsession_id, Number(id)))
+  .orderBy(asc(SubsessionRaceResults.finish_position));
+const [practiceResultOne] = practiceResults;
+const [qualifyingResultOne] = qualifyingResults;
+const [raceResultOne] = raceResults;
+const session_results = [
+  {
+    simsession_type_name: practiceResultOne.simsession_type_name,
+    simsession_name: practiceResultOne.simsession_name,
+    results: practiceResults
+  },
+  {
+    simsession_type_name: qualifyingResultOne.simsession_type_name,
+    simsession_name: qualifyingResultOne.simsession_name,
+    results: qualifyingResults
+  },
+  {
+    simsession_type_name: raceResultOne.simsession_type_name,
+    simsession_name: raceResultOne.simsession_name,
+    results: raceResults,
+  }
+]
 const {
   track,
-  session_results,
   corners_per_lap: cornersPerLap,
   allowed_licenses: licenses,
   license_category: licenseCategory,
