--- a/src/pages/user/[id]/season/[seasonId]/car-class/[carClassId]/season-summary.astro
+++ b/src/pages/user/[id]/season/[seasonId]/car-class/[carClassId]/season-summary.astro
@@ -1,54 +1,57 @@
 ---
+import { db, eq, and, sql, PastSeason, Standing, Subsession, SubsessionRaceResults } from "astro:db";
 import DefaultLayout from "$lib/layouts/default.astro";
 import handleResults from "$lib/utils/handle-session-results";
 import fieldIdToLabelMap from "$lib/utils/field-id-to-label-map";
 import lapTimeFields from "$lib/utils/lap-time-fields";
 import parseLapTime from "$lib/utils/parse-lap-time";
-import { connectToDatabase } from "$lib/mongodb";
 import type {
   License,
-  Season,
   SessionResult,
-  Subsession,
   Track,
 } from "$lib/types";
 import userIds from "$lib/utils/user-ids";
 export async function getStaticPaths() {
-  const dbConnection = await connectToDatabase();
-  const db = dbConnection.db;
-  const collection = db.collection("standings");
-  const seasons: Array<Season> = await collection
-    .find({ "season_driver_data.cust_id": { $in: userIds } })
-    .toArray();
+  const seasons = await db
+    .select()
+    .from(Standing)
+    .where(sql`${Standing.cust_id} IN ${userIds}`);
   return seasons.map((season) => ({
     params: {
-      id: Number(season.season_driver_data.cust_id),
+      id: Number(season.cust_id),
       seasonId: Number(season.season_id),
       carClassId: Number(season.car_class_id),
     },
   }));
 }
 const { id, seasonId, carClassId } = Astro.params;
-const dbConnection = await connectToDatabase();
-const db = dbConnection.db;
-const subsessionCollection = db.collection<Subsession>("subsessions");
-const subsessions: Array<Subsession> = await subsessionCollection
-  .find({
-    season_id: Number(seasonId),
-    "session_results.2.results": {
-      $elemMatch: { cust_id: Number(id), car_class_id: Number(carClassId) },
-    },
-  })
-  .sort({ _id: 1 })
-  .toArray();
-const standingsCollection = db.collection("standings");
-const season = await standingsCollection.findOne({
-  _id: `${seasonId}_${carClassId}_${id}`,
-});
-const pastSeasonsCollection = db.collection("pastseasons");
-const pastSeasonInformation = await pastSeasonsCollection.findOne({
-  _id: Number(seasonId),
-});
+  const allSeasonSubsessions = await db
+  .select()
+  .from(Subsession)
+  .where(eq(Subsession.season_id, Number(seasonId)));
+const allSeasonRaceResultsForUser = await db
+  .select()
+  .from(SubsessionRaceResults)
+  .where(
+    and(
+      eq(SubsessionRaceResults.cust_id, Number(id)),
+      eq(SubsessionRaceResults.car_class_id, Number(carClassId))
+    )
+  );
+const subsessions = allSeasonSubsessions
+  .filter((v) =>
+    allSeasonRaceResultsForUser
+      .map((w) => w.subsession_id)
+      .includes(v.subsession_id)
+  );
+const [season] = await db
+  .select()
+  .from(Standing)
+  .where(eq(Standing.id, `${seasonId}_${carClassId}_${id}`));
+const [pastSeasonInformation] = await db
+  .select()
+  .from(PastSeason)
+  .where(eq(PastSeason.season_id, Number(seasonId)));
 const trackSchedule: Array<Track> = pastSeasonInformation.race_weeks.map(
   (raceWeek: Record<string, Track>) => ({
     ...raceWeek.track,
@@ -71,9 +74,9 @@ trackScheduleMap.forEach((value) => {
   );
   const userResults = respectiveSubsessions.map((subsession) => ({
     subsession,
-    userResult: subsession.session_results[2].results.filter(
-      (v: any) => v.cust_id === Number(id)
-    )[0],
+    userResult: allSeasonRaceResultsForUser.find(
+      (v) => v.subsession_id === subsession.subsession_id
+    ),
   }));
   if (userResults.length > 1) {
     const bestUserResult = userResults
@@ -183,10 +186,10 @@ const incidents = results
   .map((result) => result.incidents)
   .reduce((a, b) => a + b, 0);
 const { division, division_rank, overall_rank, season_name } = season;
-const title = `${season_name}: Season Summary for ${season.season_driver_data.display_name}`;
+const title = `${season_name}: Season Summary for ${season.display_name}`;
 const description = title;
 const overviewItems = [
-  `Points: ${season.season_driver_data.points}`,
+  `Points: ${season.points}`,
   `Wins: ${wins}`,
   `Average Start: ${
     averageStart /
