--- a/src/pages/user/[id]/standings/full-participation.astro
+++ b/src/pages/user/[id]/standings/full-participation.astro
@@ -1,5 +1,5 @@
 ---
-import { connectToDatabase } from "$lib/mongodb";
+import { db, and, eq, desc, Standing } from "astro:db";
 import StandingsLayout from "$lib/layouts/standings.astro";
 import userIds from "$lib/utils/user-ids";
 export function getStaticPaths() {
@@ -8,16 +8,11 @@ export function getStaticPaths() {
 const { id } = Astro.params;
 const seoTitle = `Fully Participated Standings - ${id}`;
 const seoDescription = `Fully partipacipated standings page for user ID: ${id}`;
-const dbConnection = await connectToDatabase();
-const { db } = dbConnection;
-const collection = db.collection("standings");
-const standingsResults = await collection
-  .find({
-    "season_driver_data.cust_id": Number(id),
-    "season_driver_data.weeks_counted": 8,
-  })
-  .sort({ season_id: -1 })
-  .toArray();
+const standingsResults = await db
+  .select()
+  .from(Standing)
+  .where(and(eq(Standing.cust_id, Number(id)), eq(Standing.weeks_counted, 8)))
+  .orderBy(desc(Standing.season_id));
 ---
 
 <StandingsLayout {id} {seoTitle} {seoDescription} {standingsResults} />
