--- a/src/pages/user/[id]/subsessions/index.astro
+++ b/src/pages/user/[id]/subsessions/index.astro
@@ -1,6 +1,5 @@
 ---
-import { connectToDatabase } from "$lib/mongodb";
-import type { Subsession } from "$lib/types";
+import { db, desc, eq, sql, Subsession, SubsessionRaceResults } from "astro:db";
 import SubsessionsLayout from "$lib/layouts/subsessions.astro";
 import userIds from "$lib/utils/user-ids";
 export function getStaticPaths() {
@@ -9,15 +8,28 @@ export function getStaticPaths() {
 const { id } = Astro.params;
 const seoTitle = `Subsessions - ${id}`;
 const seoDescription = `Subsessions page for user ID: ${id}`;
-const dbConnection = await connectToDatabase();
-const { db } = dbConnection;
-const collection = db.collection<Subsession>("subsessions");
-const subsessions = await collection
-  .find({
-    "session_results.2.results": { $elemMatch: { cust_id: Number(id) } },
-  })
-  .sort({ _id: -1 })
-  .toArray();
+const subsessionRaceResults = await db
+  .select()
+  .from(SubsessionRaceResults)
+  .where(eq(SubsessionRaceResults.cust_id, Number(id)));
+const subsessionsWithoutResult = await db
+  .select()
+  .from(Subsession)
+  .where(
+    sql`${Subsession.subsession_id} IN ${subsessionRaceResults.map((subsession) => subsession.subsession_id)}`
+  )
+  .orderBy(desc(Subsession.subsession_id));
+const subsessions = subsessionsWithoutResult.map((subsessionWithoutResult) => {
+  const { subsession_id } = subsessionWithoutResult;
+  const userResult = subsessionRaceResults.find(
+    (subsessionRaceResult) =>
+      subsessionRaceResult.subsession_id === subsession_id
+  );
+  return {
+    ...subsessionWithoutResult,
+    userResult,
+  };
+});
 ---
 
 <SubsessionsLayout {id} {seoTitle} {seoDescription} {subsessions} />
