--- a/src/pages/user/[id]/scheduling/index.astro
+++ b/src/pages/user/[id]/scheduling/index.astro
@@ -2,9 +2,7 @@
 import { db, eq, User, Car, CarClass, Season } from "astro:db";
 import DefaultLayout from "$lib/layouts/default.astro";
 import type {
-  Car as CarType,
   CarClass as CarClassType,
-  SchedulingSeason,
   SchedulingTableResult,
   Track,
 } from "$lib/types";
@@ -21,11 +19,13 @@ const [user] = await db
   .from(User)
   .where(eq(User.cust_id, id));
 const { carPackages, trackPackages } = user;
-const carIds = carPackages.map((carPackage) => carPackage.content_ids).flat();
-const trackIds = trackPackages
-  .map((trackPackage) => trackPackage.content_ids)
-  .flat();
-const cars: Array<CarType> = await db.select().from(Car);
+const carIds = Array.isArray(carPackages)
+  ? carPackages.map((carPackage) => carPackage.content_ids).flat()
+  : [];
+const trackIds = Array.isArray(trackPackages)
+  ? trackPackages.map((trackPackage) => trackPackage.content_ids).flat()
+  : [];
+const cars = await db.select().from(Car);
 const carsMap = new Map();
 cars.forEach((car) => {
   const { car_id } = car;
@@ -44,16 +44,16 @@ const carClassIdsForCarIds = carClassesResults
   )
   .map((result) => result.carClassId);
 // End comment of previous todo
-const carClasses: Array<CarClassType> = await db.select().from(CarClass);
+const carClasses = await db.select().from(CarClass);
 const carClassesMap = new Map();
 carClasses.forEach((carClass) => {
   const { car_class_id, cars_in_class } = carClass;
-  const carsInClass = cars_in_class.map((carInClass) =>
-    carsMap.get(carInClass.car_id)
-  );
+  const carsInClass = Array.isArray(cars_in_class)
+    ? cars_in_class.map((carInClass) => carsMap.get(carInClass.car_id))
+    : [];
   carClassesMap.set(car_class_id, { ...carClass, cars_in_class: carsInClass });
 });
-const seasons: Array<SchedulingSeason> = await db.select().from(Season);
+const seasons = await db.select().from(Season);
 const carClassIdSet = new Set(carClassIdsForCarIds);
 const trackIdSet = new Set(trackIds);
 const licenseGroupToNameMap: Record<string, string> = {
@@ -66,24 +66,28 @@ const licenseGroupToNameMap: Record<string, string> = {
 const results: Array<SchedulingTableResult> = seasons
   .map((season) => {
     const { schedules, season_name, car_class_ids } = season;
-    const carClassData: Array<CarClassType> = car_class_ids.map(
-      (car_class_id: number) => carClassesMap.get(car_class_id)
-    );
-    const tracks: Array<Track> = schedules.map(
-      (schedule: any, index: number) => ({
-        race_week_num: index + 1,
-        ...schedule.track,
-      })
-    );
+    const carClassData: Array<CarClassType> = Array.isArray(car_class_ids)
+      ? car_class_ids.map((car_class_id: number) =>
+          carClassesMap.get(car_class_id)
+        )
+      : [];
+    const tracks: Array<Track> = Array.isArray(schedules)
+      ? schedules.map((schedule: any, index: number) => ({
+          race_week_num: index + 1,
+          ...schedule.track,
+        }))
+      : [];
     const ownedTrackWeeks: Array<number> = tracks
       .filter((track: Track) => trackIdSet.has(track.track_id))
       .map((track) => Number(track.race_week_num));
     const trackPercentageOwned = Math.round(
       (ownedTrackWeeks.length / tracks.length) * 100
     );
-    const ownedCarClasses = car_class_ids.filter((carClassId: number) =>
-      carClassIdSet.has(carClassId)
-    );
+    const ownedCarClasses = Array.isArray(car_class_ids)
+      ? car_class_ids.filter((carClassId: number) =>
+          carClassIdSet.has(carClassId)
+        )
+      : [];
     return {
       "Season Name": String(season_name),
       "License Level": licenseGroupToNameMap[String(season.license_group)],
